# Shophere

./: .gitignore  docker-compose.yml
product_service/: main.py  pyproject.toml
product_service/app/controller/: category_router.py  product_routes.py
product_service/app/core/: db.py
product_service/app/entity/: models.py
product_service/app/repository/: category.py  category_interface.py  product.py  product_interface.py
product_service/app/service/: category_service.py  product_service.py
product_service/app/utils/: schema.py
user_service/: .env.example  Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml
user_service/app/controller/: user_routes.py
user_service/app/core/: db.py  security.py  settings.py
user_service/app/entity/: model.py
user_service/app/repository/: user.py  user_interface.py
user_service/app/service/: user_service.py
user_service/app/utils/: messages.py
user_service/migration/: env.py
user_service/migration/versions/: 2024_04_07_2149-10b611d7e4f1_user_init.py  2024_04_07_2151-4501a7c57e5f_user_verified_column_added.py
